fix css layout bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -195,6 +195,8 @@ a:hover {
 
 html, body {
   background: url(nothing.txt) white fixed; /*prevent screen flash in IE6*/
+  overflow-y:scroll;
+  margin:0 auto
   //-webkit-transform: translateZ(0);
 }
 
@@ -204,3 +206,7 @@ html, body {
   border-radius: 6px;
 }
 
+.container-full{
+  margin: 0 auto;
+  width: 100%;
+}
